--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -20,6 +20,7 @@ body {
   font: 14px/1.4 Verdana, sans-serif;
   color: $text-color;
   background: $background-color;
+  margin: 0;
 }
 
 h1, h2 {
